# conversor-sistemas-numeracao

./: .README.md.swp  Cargo.toml  README.md
.github/workflows/: ci-rust.yml
docs/: arquitetura.md
src/: lib.rs  main.rs
src/contracts/: batch.rs  dto.rs  errors.rs  facade.rs  mod.rs  parser.rs  processor.rs  quiz.rs
src/core/: core.rs
src/data/: entrada.csv  test.csv
src/ui/: app.rs
